completed navbar all links work

--- a/index.html
+++ b/index.html
@@ -3,44 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BootstrapHW</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Gabriella Trujillo-Robnett</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<body style="background-color: teal;">
+    <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
+        <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0" style="max-heights:30px">Gabriella Trujillo-Robnett</span>
+            <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
+                <ul class="nav navbar-right navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+    </nav>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
-<div class="container">
+<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 700px">
     <div class="row">
+        <div class="col-md-12">
+            <div class="page-header">
         <h1>About Me</h1>
-    </div>
-    <div class="row">
-        <div class="col-12">
-            <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t1.0-9/85031286_10218765307396440_4669591656570290176_o.jpg?_nc_cat=102&_nc_sid=dd7718&_nc_ohc=PMt3liBX5K8AX-TG0Yv&_nc_ht=scontent.fapa1-2.fna&oh=348767ef44252a2df20f208974490fea&oe=5EAB2E0D" alt="gabriellaphoto" id class="float-left m-2">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quidem accusantium quos numquam porro illum magni cum corrupti distinctio, sequi cupiditate quam enim reiciendis consequuntur autem! Mollitia dicta asperiores repudiandae nisi?</p>
+            <div class="row">
+                <div class="col-12">
+                    <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t1.0-9/85031286_10218765307396440_4669591656570290176_o.jpg?_nc_cat=102&_nc_sid=dd7718&_nc_ohc=PMt3liBX5K8AX-TG0Yv&_nc_ht=scontent.fapa1-2.fna&oh=348767ef44252a2df20f208974490fea&oe=5EAB2E0D" alt="gabriellaphoto" class="float-left m-2" class="img-responsive" width= "50%">
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta error nesciunt beatae vero, non iure quas quisquam enim amet corporis dolorum impedit velit delectus, reiciendis maxime commodi reprehenderit! Similique sapiente iste nam fuga sunt facere maiores magnam aut nulla repudiandae numquam quia rerum, eaque perspiciatis inventore quidem repellendus hic ex exercitationem voluptates debitis. Similique accusantium, blanditiis deserunt cupiditate accusamus aut dolore dolorem fugiat enim odit necessitatibus nisi consectetur soluta quos odio earum iste repellendus? Quae, consectetur. Maxime veritatis recusandae nulla blanditiis suscipit saepe. Ratione soluta reiciendis ullam itaque? Eius, magni debitis voluptas pariatur ratione quisquam quos, at ipsum ipsam et, mollitia dolore corrupti odio iure? Officia, odio exercitationem? Expedita, aut quae! Enim magnam architecto inventore suscipit dolor perferendis. Atque beatae, cum ullam animi non numquam doloremque, obcaecati provident, consequuntur labore quis porro enim deserunt veritatis? Sed, dicta distinctio! Harum dicta a, repellat hic quasi facilis cumque quae dolorem fugit, nam animi odio sint error officiis sapiente, modi eum aliquam sequi ut quo? Maxime nam soluta voluptates libero deleniti reprehenderit pariatur doloremque earum optio asperiores fuga nobis, ex iure itaque assumenda tempore iusto deserunt quis fugit laboriosam dolor neque repellendus! Illum ducimus minima a sequi nesciunt, aspernatur accusamus eius. Commodi dolorum earum nulla cum quis facilis sunt ab omnis illo, vero, tenetur, fugiat accusamus vel pariatur mollitia distinctio quos aut ipsum minima! Minus optio ea voluptas consectetur. Ullam sunt animi quibusdam corporis. Totam eligendi distinctio ullam corrupti a dolor eius possimus autem reiciendis quo? Laborum adipisci voluptatum tempora officia aspernatur blanditiis?</p>
+                </div>
+            </div>
         </div>
+    </div>
+</div>
+    
     </div>
 </div>
     
