finished bootstrap components for about me section

--- a/index.html
+++ b/index.html
@@ -5,21 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BootstrapHW</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <style>
-      hr { 
-        display: block;
-        margin-top: 0.5em;
-        margin-bottom: 0.5em;
-        margin-left: auto;
-        margin-right: auto;
-        border-style: inset;
-        border-width: 1px;
-      } 
-      </style>
+
+    <link rel="stylesheet" href="Assets/style.css">
+  
+  
 </head>
 <body style="background-color: teal;">
+  
     <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
-        <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0" style="max-heights:30px">Gabriella Trujillo-Robnett</span>
+        <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-heights:30px;">Gabriella Trujillo-Robnett</span>
             <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
                 <ul class="nav navbar-right navbar-nav">
                     <li class="nav-item">
@@ -52,6 +46,11 @@
     
     </div>
 </div>
-    
+
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">Place sticky footer content here.</span>
+  </div>
+</footer>
 </body>
 </html>
