--- a/index.html
+++ b/index.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BootstrapHW</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Assets/style.css">
   
-  
 </head>
-<body style="background-color: teal;">
+<body>
   
     <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
-        <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-heights:30px;">Gabriella Trujillo-Robnett</span>
+        <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-height:30px;">Gabriella Trujillo-Robnett</span>
             <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
                 <ul class="nav navbar-right navbar-nav">
                     <li class="nav-item">
@@ -28,7 +27,7 @@
                 </ul>
     </nav>
 
-<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 700px">
+<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 1000px">
     <div class="row">
         <div class="col-md-12">
             <div class="page-header">
@@ -37,7 +36,7 @@
             <div class="row">
                 <div class="col-12">
                     <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t1.0-9/85031286_10218765307396440_4669591656570290176_o.jpg?_nc_cat=102&_nc_sid=dd7718&_nc_ohc=PMt3liBX5K8AX-TG0Yv&_nc_ht=scontent.fapa1-2.fna&oh=348767ef44252a2df20f208974490fea&oe=5EAB2E0D" alt="gabriellaphoto" class="float-left m-2" class="img-responsive" width= "50%">
-                    <p>Hello! I'm a serious gamer and nerd- LOTR? 10/10, Fifth Element? 15/10 Harry Potter? 20/10 (My first tattoo is from the Mauraders Map)</p>
+                    <p>Wasssuuuup! Here's what you need to know about me. I'm Black, Mexican and Native American (Yaqui and Sioux to be specific). I was born in New Jersey where my family lived until I was four, and then my dad kidnapped my brother, sister and I (what a twist!!). We were missing for four year, travelling from New York to Washington and then Nevada. I missed the 1st and 2nd grade and attended 3rd grade under an alias. My mom was on The Montell Williams show on an episode about missing children, and one of my older sisters classmates recognized her from the show and their family contacted the police. After we were found we moved to California to live with my mom and the rest of my family. I lived in the Yay Area for most of my life, and I was surrounded by loving and supportive people. I was in a jazz band in middle school and was privileged enough to be chosen for a scholarship to the Stanford Jazz program that I attended three years in a row. I'm blessed that my high-school years were an amazing time for me. I was in choir, band (I played the Alto Saxophone), student body union, drama club, and was the founder of our Glee Club and president of the Gay Straight Alliance. I was also the lead singer of an alt-rock band called Eternal Downpour...It was actually an emo band but lets go with alt-rock. After high-school I decided that I wanted to pursue my singing and acting career and came to live with my dad here in Denver because he could support me while I focused on my dreams. After many wrong turns I finally am on the right path. I recently released my first music video and am working on my second and third single. Every hardship that was dealt to me has led me up to where I am now and I wouldn't change it for anything.</p>
                 </div>
             </div>
         </div>
@@ -49,7 +48,7 @@
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">Place sticky footer content here.</span>
+    <span class="text-muted">If you're reading this, you're now a Bad Bitch. Embrace your new identity</span>
   </div>
 </footer>
 </body>
