--- a/portfolio.html
+++ b/portfolio.html
@@ -3,35 +3,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BootstrapHW</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Assets/style.css">
+  
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Gabriella Trujillo-Robnett</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  
+    <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
+        <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-height:30px;">Gabriella Trujillo-Robnett</span>
+            <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
+                <ul class="nav navbar-right navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
+                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="portfolio.html">Portfolio</a>
+                     </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+    </nav>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="index.html">About<span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="contact.html">Contact</a>
-      </li>
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 700px">
+    <div class="row d-flex justify-content-center">
+        <div class="col-md-12">
+            <div class="page-header">
+        <h1>Portfolio</h1>
+        <hr>
+            <div class="row d-flex justify-content-center">
+                <div class="col">
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0OdKkc13B0rpFjXclQcsxhWiXwGQi2szR9E5LdAm2jq-hFM6&usqp=CAU" class="card-img-top" alt="microphone">
+                    <div class="card-body">
+                      <p class="card-text">Singing</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card" style="width: 18rem;">
+                    <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t31.0-8/s960x960/20616990_10212067956886863_5673742228017269164_o.jpg?_nc_cat=100&_nc_sid=daf655&_nc_ohc=PtdKDdJYtaIAX-9wj2G&_nc_ht=scontent.fapa1-2.fna&_nc_tp=7&oh=759aa3a7f7f82a44149b4edb1fbf4769&oe=5EAC8669" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">gnejfweo</p>
+                    </div>
+                  </div>
+                </div>      
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="card" style="width: 18rem;">
+                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk62fhKFiBA4M0nXxijjoHxyBpzQS6gs0_1wO5thiXy6nE6S-pSw&s" class="card-img-top" alt="dance">
+                  <div class="card-body">
+                    <p class="card-text">Dance crew
+                    </p>
+                  </div>
+                </div>
+              </div>
+                  <div class="col">
+                    <div class="card" style="width: 18rem;">
+                      <img src="https://cdn.shopify.com/s/files/1/1932/5221/products/Ravenclaw_Pop_Socket_copy_530x@2x.jpg?v=1530648838" class="card-img-top" alt="hogwarts">
+                      <div class="card-body">
+                        <p class="card-text">ravenclaw</p>
+                      </div>
+                    </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+</div>
     
+    </div>
+</div>
+
+<footer class="footer mt-auto py-3">
+  <div class="container">
+    <span class="text-muted">If you're reading this, you're now a Bad Bitch. Embrace your new identity.</span>
+  </div>
+</footer>
 </body>
 </html>
