--- a/portfolio.html
+++ b/portfolio.html
@@ -33,7 +33,7 @@
             <div class="page-header">
         <h1>Portfolio</h1>
         <hr>
-            <div class="row d-flex justify-content-center">
+            <div class="row">
                 <div class="col">
                   <div class="card" style="width: 18rem;">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0OdKkc13B0rpFjXclQcsxhWiXwGQi2szR9E5LdAm2jq-hFM6&usqp=CAU" class="card-img-top" alt="microphone">
