--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
                 </ul>
     </nav>
 
-<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 700px">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 700px">
     <div class="row d-flex justify-content-center">
         <div class="col-md-12">
             <div class="page-header">
@@ -38,15 +38,15 @@
                   <div class="card" style="width: 18rem;">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0OdKkc13B0rpFjXclQcsxhWiXwGQi2szR9E5LdAm2jq-hFM6&usqp=CAU" class="card-img-top" alt="microphone">
                     <div class="card-body">
-                      <p class="card-text">Singing</p>
+                      <h2 class="card-text">Toss a coin to your Witcher</h2>
                     </div>
                   </div>
                 </div>
                 <div class="col">
                   <div class="card" style="width: 18rem;">
-                    <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t31.0-8/s960x960/20616990_10212067956886863_5673742228017269164_o.jpg?_nc_cat=100&_nc_sid=daf655&_nc_ohc=PtdKDdJYtaIAX-9wj2G&_nc_ht=scontent.fapa1-2.fna&_nc_tp=7&oh=759aa3a7f7f82a44149b4edb1fbf4769&oe=5EAC8669" class="card-img-top" alt="...">
+                    <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t31.0-8/s960x960/20616990_10212067956886863_5673742228017269164_o.jpg?_nc_cat=100&_nc_sid=daf655&_nc_ohc=PtdKDdJYtaIAX-9wj2G&_nc_ht=scontent.fapa1-2.fna&_nc_tp=7&oh=759aa3a7f7f82a44149b4edb1fbf4769&oe=5EAC8669" class="card-img-top" alt="drawing">
                     <div class="card-body">
-                      <p class="card-text">gnejfweo</p>
+                      <h2 class="card-text">DnD anyone? Stealth Archers Only</h2>
                     </div>
                   </div>
                 </div>      
@@ -56,8 +56,8 @@
                 <div class="card" style="width: 18rem;">
                   <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk62fhKFiBA4M0nXxijjoHxyBpzQS6gs0_1wO5thiXy6nE6S-pSw&s" class="card-img-top" alt="dance">
                   <div class="card-body">
-                    <p class="card-text">Dance crew
-                    </p>
+                    <h2 class="card-text">Hip Hop Dance Crew
+                    </h2>
                   </div>
                 </div>
               </div>
@@ -65,7 +65,7 @@
                     <div class="card" style="width: 18rem;">
                       <img src="https://cdn.shopify.com/s/files/1/1932/5221/products/Ravenclaw_Pop_Socket_copy_530x@2x.jpg?v=1530648838" class="card-img-top" alt="hogwarts">
                       <div class="card-body">
-                        <p class="card-text">ravenclaw</p>
+                        <h2 class="card-text">Ravenclaw Forever</h2>
                       </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">If you're reading this, you're now a Bad Bitch. Embrace your new identity.</span>
+    <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity.</span>
   </div>
 </footer>
 </body>
