--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
                 </ul>
     </nav>
 
-<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 700px">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 700px">
     <div class="row">
         <div class="col-md-12">
             <div class="page-header">
@@ -36,7 +36,7 @@
         <form>
           <div class="form-group">
             <label for="exampleFormControlInput1">Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Bad Bitch">
+            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Luna Lovegood">
           </div>
           <div class="form-group">
             <label for="exampleFormControlInput1">Email Address</label>
@@ -56,7 +56,7 @@
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">If you're reading this, you're now a Bad Bitch. Embrace your new identity.</span>
+    <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity.</span>
   </div>
 </footer>
 </body>
