--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </ul>
     </nav>
 
-<div class="flexbox bg-white p-4 m-auto m-sm-4" style="max-width: 1000px">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 1000px">
     <div class="row">
         <div class="col-md-12">
             <div class="page-header">
@@ -48,7 +48,7 @@
 
 <footer class="footer mt-auto py-3">
   <div class="container">
-    <span class="text-muted">If you're reading this, you're now a Bad Bitch. Embrace your new identity</span>
+    <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity</span>
   </div>
 </footer>
 </body>
