changed bg and head foot colors

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   
 </head>
 <body>
-  
+  <nav>
     <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
         <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-height:30px;">Gabriella Trujillo-Robnett</span>
             <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
@@ -27,13 +27,15 @@
                 </ul>
               </div>
     </nav>
-
+</nav>
 <div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 700px">
     <div class="row">
         <div class="col-md-12">
-            <div class="page-header">
+            <header>
         <h1>About Me</h1>
         <hr>
+        </header>
+        <section>
         <form>
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Name</label>
@@ -48,16 +50,13 @@
             <textarea class="form-control" id="exampleFormControlTextarea3" rows="3"></textarea>
           </div>
         </form>
+        </section>
         </div>
     </div>
 </div>
-    
-</div>
-
 <footer class="footer mt-auto py-3">
   <div class="container">
     <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity.</span>
   </div>
-</footer>
 </body>
 </html>
