--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
 </head>
 <body>
-  
+  <nav>
     <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
         <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-height:30px;">Gabriella Trujillo-Robnett</span>
             <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
@@ -27,24 +27,30 @@
                 </ul>
             </div>
     </nav>
-
+</nav>
 <div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 1000px">
     <div class="row">
         <div class="col-md-12">
-            <div class="page-header">
+            <header>
         <h1>About Me</h1>
         <hr>
-            <div class="row">
-                <div class="col-12">
-                    <img src="https://i.postimg.cc/jjt8H1ys/Snapchat-1284474979-1.png" alt="gabriellaphoto" class="float-left m-2 img-responsive" width= "500">
-                    <p>Wasssuuuup! Here's what you need to know about me. I'm Black, Mexican and Native American (Yaqui and Sioux to be specific). I was born in New Jersey where my family lived until I was four, and then my dad kidnapped my brother, sister and I (what a twist!!). We were missing for four year, travelling from New York to Washington and then Nevada. I missed the 1st and 2nd grade and attended 3rd grade under an alias. My mom was on The Montell Williams show on an episode about missing children, and one of my older sisters classmates recognized her from the show and their family contacted the police. After we were found we moved to California to live with my mom and the rest of my family. I lived in the "Yay Areeeaaaaa" (that's an E40 reference :) ) for most of my life, and I was surrounded by loving and supportive people. I was in a jazz band in middle school and was privileged enough to be chosen for a scholarship to the Stanford Jazz program that I attended three years in a row. I'm blessed that my high-school years were an amazing time for me. I was in choir, band (I played the Alto Saxophone), student body union, drama club, and was the founder of our Glee Club and president of the Gay Straight Alliance. I was also the lead singer of an alt-rock band called Eternal Downpour...It was actually an emo band but lets go with alt-rock. After high-school I decided that I wanted to pursue my singing and acting career and came to live with my dad here in Denver because he could support me while I focused on my dreams. I joined a professional Hip Hop dance crew called COhe One Motive which opened a lot of doors for me and connected me with so many amazing people in the Denver community. I worked at Verizon for 5 years, and I could never do the things that I had always dreamed of because...well, retail. I wanted to be in films and dance competitions and focus on my singing career! But one of my goals that I never felt I could achieve was becoming a full stack developer. When I left Verizon and became a regular M-F kind of adult, my world became exactly what I had wanted it to be. I'm an orange belt in Krav Maga, have been in short films and commercials and released my very first music video earlier this year- but I was most eager to finally start this bootcamp. I was anxious and almost talked myself out of it, thinking "What the hell am I doing?". I had a lot of doubts and concerns, but I knew that if I didn't try I'd regret it. Everything that I've been through and have done so far has prepared me to take on this challenge, and I know that I'll succeed because I'm a Mexi-CAN not a Mexi-CANT.</p>
-                </div>
+    </header>
+            <section>
+            <div class="row d-flex justify-content-center">
+                <div class="col-md-12">
+                    
+                    <figure>
+                    <img src="https://i.postimg.cc/jjt8H1ys/Snapchat-1284474979-1.png" alt="gabriellaphoto" class="float-right m-2 img-responsive rounded-circle" width= "530" height= "960"></figure>
+                    <p class="font-weight-bold">Hello! My name is Gabriella Valencia Trujillo-Robnett (say that three times fast) and I grew up in the Bay Area- East Side San Jose to be specific. I moved to Colorado six years ago and while I don't ski or snowboard, I do make the grueling and arduous trek to the local dog park to play with my needy German Sheperds, Kenai and Kovu. I moved here to focus on my passions, which are singing, acting and dancing- next to coding of course. My coding journey started when I was a mere padawan, teaching myself basic HTML and CSS while playing Neopets. I couldn't wait to get home and edit background images and font colors for hours, and not much has changed since then. </p>
             </div>
+            </div>
+        </div>
         </div>
     </div>
 </div>
     
 </div>
+</section>
 
 <footer class="footer mt-auto py-3">
   <div class="container">
@@ -53,3 +59,6 @@
 </footer>
 </body>
 </html>
+
+
+
