--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
   
 </head>
 <body>
-  
+  <nav>
     <nav class="navbar navbar-fixed-top navbar-expand navbar-dark bg-dark flex-row flex-wrap">
         <span class="navbar-brand d-flex justify-content-center justify-content-md-start mb-1 h1 col-12 col-md-4 pb-0 " style="max-height:30px;">Gabriella Trujillo-Robnett</span>
             <div class="navbar-nav-scroll ml-auto d-flex justify-content-md-end justify-content-center col-12 col-md-4 pt-0" style="max-height:30px">
@@ -27,13 +27,15 @@
                 </ul>
               </div>
     </nav>
-
+</nav>
 <div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 700px">
     <div class="row d-flex justify-content-center">
         <div class="col-md-12">
-            <div class="page-header">
+            <header>
         <h1>Portfolio</h1>
         <hr>
+        </header>
+        <section>
             <div class="row">
                 <div class="col">
                   <div class="card" style="width: 18rem;">
@@ -75,6 +77,7 @@
           </div>
         </div>
 </div>
+</section>
 
 <footer class="footer mt-auto py-3">
   <div class="container">
