--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <link rel="stylesheet" href="Assets/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Meddon&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright&display=swap');
+        </style>
   
 </head>
 <body>
@@ -25,38 +33,45 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
-              </div>
+            </div>
     </nav>
 </nav>
-<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 700px">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 1000px">
     <div class="row">
         <div class="col-md-12">
             <header>
-        <h1>About Me</h1>
+        <h1>Contact Me</h1>
         <hr>
-        </header>
-        <section>
-        <form>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Name</label>
-            <input type="email" class="form-control" id="exampleFormControlTextarea1" placeholder="Luna Lovegood">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea2">Email Address</label>
-            <input type="email" class="form-control" id="exampleFormControlTextarea2" placeholder="BaddiesOnly@YaaasssQueen.com">
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea3">Message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea3" rows="3"></textarea>
-          </div>
-        </form>
-        </section>
+    </header>
+    <section>
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Name</label>
+          <input type="email" class="form-control" id="exampleFormControlTextarea1" placeholder="Legolas">
         </div>
-    </div>
-</div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea2">Email Address</label>
+          <input type="email" class="form-control" id="exampleFormControlTextarea2" placeholder="Wizard@DungeonMaster.org">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea3">Note</label>
+          <textarea class="form-control" id="exampleFormControlTextarea3" rows="3" placeholder="Any questions, concerns, hopes, dreams, or emotional outbursts?"></textarea>
+        </div>
+      </form>
+      </section>
+
+
 <footer class="footer mt-auto py-3">
-  <div class="container">
-    <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity.</span>
-  </div>
+    <div id="footerHolder">
+      <div class="icon-bar">
+        <a href="https://github.com/Gabriellatrujillor" class="github" target="_" alt="Github Link"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/gabriella-trujillo-robnett/" target="_" class="linkedin" alt="LinkedIn Link"><i class="fa fa-linkedin"></i></a>
+
+      </div>
+
+    </div>
+  </footer>
+
+
 </body>
 </html>
