--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <link rel="stylesheet" href="Assets/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Meddon&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright&display=swap');
+        </style>
   
 </head>
 <body>
@@ -40,8 +48,8 @@
                 <div class="col-md-12">
                     
                     <figure>
-                    <img src="https://i.postimg.cc/jjt8H1ys/Snapchat-1284474979-1.png" alt="gabriellaphoto" class="float-right m-2 img-responsive rounded-circle" width= "530" height= "960"></figure>
-                    <p class="font-weight-bold">Hello! My name is Gabriella Valencia Trujillo-Robnett (say that three times fast) and I grew up in the Bay Area- East Side San Jose to be specific. I moved to Colorado six years ago and while I don't ski or snowboard, I do make the grueling and arduous trek to the local dog park to play with my needy German Sheperds, Kenai and Kovu. I moved here to focus on my passions, which are singing, acting and dancing- next to coding of course. My coding journey started when I was a mere padawan, teaching myself basic HTML and CSS while playing Neopets. I couldn't wait to get home and edit background images and font colors for hours, and not much has changed since then. </p>
+                    <img src="https://i.postimg.cc/jjt8H1ys/Snapchat-1284474979-1.png" alt="gabriellaphoto" class="float-left m-2 img-responsive rounded-circle" width= "530" height= "995"></figure>
+                    <p class="text">Hello! My name is Gabriella Valencia Trujillo-Robnett (say that three times fast) and I grew up in the Bay Area- East Side San Jose to be specific. I moved to Colorado six years ago and while I don't ski or snowboard, I do make the grueling and arduous trek to the local dog park to play with my needy German Sheperds, Kenai and Kovu. I moved here to focus on my passions, which are singing, acting and dancing- next to coding of course. My coding journey started when I was a mere padawan, teaching myself basic HTML and CSS while playing Neopets. I couldn't wait to get home and edit background images and font colors for hours, and not much has changed since then. </p>
             </div>
             </div>
         </div>
@@ -52,11 +60,19 @@
 </div>
 </section>
 
+
 <footer class="footer mt-auto py-3">
-  <div class="container">
-    <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity</span>
-  </div>
-</footer>
+    <div id="footerHolder">
+      <div class="icon-bar">
+        <a href="https://github.com/Gabriellatrujillor" class="github" target="_" alt="Github Link"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/gabriella-trujillo-robnett/" target="_" class="linkedin" alt="LinkedIn Link"><i class="fa fa-linkedin"></i></a>
+
+      </div>
+
+    </div>
+  </footer>
+
+
 </body>
 </html>
 
