--- a/portfolio.html
+++ b/portfolio.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Italianno&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
     <link rel="stylesheet" href="Assets/style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Meddon&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Cormorant+Upright&display=swap');
+        </style>
   
 </head>
 <body>
@@ -25,64 +33,74 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
-              </div>
+            </div>
     </nav>
 </nav>
-<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 700px">
-    <div class="row d-flex justify-content-center">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 1000px">
+    <div class="row">
         <div class="col-md-12">
             <header>
         <h1>Portfolio</h1>
         <hr>
-        </header>
-        <section>
-            <div class="row">
-                <div class="col">
-                  <div class="card" style="width: 18rem;">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQK0OdKkc13B0rpFjXclQcsxhWiXwGQi2szR9E5LdAm2jq-hFM6&usqp=CAU" class="card-img-top" alt="microphone">
-                    <div class="card-body">
-                      <h2 class="card-text">Toss a coin to your Witcher</h2>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card" style="width: 18rem;">
-                    <img src="https://scontent.fapa1-2.fna.fbcdn.net/v/t31.0-8/s960x960/20616990_10212067956886863_5673742228017269164_o.jpg?_nc_cat=100&_nc_sid=daf655&_nc_ohc=PtdKDdJYtaIAX-9wj2G&_nc_ht=scontent.fapa1-2.fna&_nc_tp=7&oh=759aa3a7f7f82a44149b4edb1fbf4769&oe=5EAC8669" class="card-img-top" alt="drawing">
-                    <div class="card-body">
-                      <h2 class="card-text">DnD anyone? Stealth Archers Only</h2>
-                    </div>
-                  </div>
-                </div>      
-            </div>
-            <div class="row">
-              <div class="col">
-                <div class="card" style="width: 18rem;">
-                  <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk62fhKFiBA4M0nXxijjoHxyBpzQS6gs0_1wO5thiXy6nE6S-pSw&s" class="card-img-top" alt="dance">
-                  <div class="card-body">
-                    <h2 class="card-text">Hip Hop Dance Crew
-                    </h2>
-                  </div>
-                </div>
-              </div>
-                  <div class="col">
-                    <div class="card" style="width: 18rem;">
-                      <img src="https://cdn.shopify.com/s/files/1/1932/5221/products/Ravenclaw_Pop_Socket_copy_530x@2x.jpg?v=1530648838" class="card-img-top" alt="hogwarts">
-                      <div class="card-body">
-                        <h2 class="card-text">Ravenclaw Forever</h2>
-                      </div>
-                    </div>
-                </div>
+    </header>
+    <section>
+      <div class="row">
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="https://vignette.wikia.nocookie.net/witcher/images/e/e8/Gwent_cardart_neutral_dandelion_poet.png/revision/latest?cb=20180130231711" class="card-img-top" alt="microphone">
+              <div class="card-body">
+                <h2 class="card-text">Toss a coin to your Witcher</h2>
               </div>
             </div>
           </div>
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="https://i.pinimg.com/originals/04/80/29/048029f362c484a2a46b928afbe98837.jpg" class="card-img-top" alt="drawing">
+              <div class="card-body">
+                <h2 class="card-text">DnD anyone? Stealth Archers Only</h2>
+              </div>
+            </div>
+          </div>      
+      </div>
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk62fhKFiBA4M0nXxijjoHxyBpzQS6gs0_1wO5thiXy6nE6S-pSw&s" class="card-img-top" alt="dance">
+            <div class="card-body">
+              <h2 class="card-text">Hip Hop Dance Crew
+              </h2>
+            </div>
+          </div>
         </div>
+            <div class="col">
+              <div class="card" style="width: 18rem;">
+                <img src="https://cdn.shopify.com/s/files/1/1932/5221/products/Ravenclaw_Pop_Socket_copy_530x@2x.jpg?v=1530648838" class="card-img-top" alt="hogwarts">
+                <div class="card-body">
+                  <h2 class="card-text">Ravenclaw Forever</h2>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 </section>
 
+
+
 <footer class="footer mt-auto py-3">
-  <div class="container">
-    <span class="text-muted">If you're reading this, you're now a Baddie. Embrace your new identity.</span>
-  </div>
-</footer>
+    <div id="footerHolder">
+      <div class="icon-bar">
+        <a href="https://github.com/Gabriellatrujillor" class="github" target="_" alt="Github Link"><i class="fa fa-github"></i></a>
+        <a href="https://www.linkedin.com/in/gabriella-trujillo-robnett/" target="_" class="linkedin" alt="LinkedIn Link"><i class="fa fa-linkedin"></i></a>
+
+      </div>
+
+    </div>
+  </footer>
+
+
 </body>
 </html>
+
