--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
     </nav>
 </nav>
-<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 1000px">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 2350px">
     <div class="row">
         <div class="col-md-12">
             <header>
@@ -49,7 +49,7 @@
                     
                     <figure>
                     <img src="https://i.postimg.cc/jjt8H1ys/Snapchat-1284474979-1.png" alt="gabriellaphoto" class="float-left m-2 img-responsive rounded-circle" width= "530" height= "995"></figure>
-                    <p class="text">Hello! My name is Gabriella Valencia Trujillo-Robnett (say that three times fast) and I grew up in the Bay Area- East Side San Jose to be specific. I moved to Colorado six years ago and while I don't ski or snowboard, I do make the grueling and arduous trek to the local dog park to play with my needy German Sheperds, Kenai and Kovu. I moved here to focus on my passions, which are singing, acting and dancing- next to coding of course. My coding journey started when I was a mere padawan, teaching myself basic HTML and CSS while playing Neopets. I couldn't wait to get home and edit background images and font colors for hours, and not much has changed since then. </p>
+                    <p class="text">Hello! My name is Gabriella Valencia Trujillo-Robnett (say that three times fast) and I grew up in the Bay Area. I moved to Colorado six years ago and while I don't ski or snowboard, I do make the arduous trek to the local dog park to play with my needy German Sheperds, Kenai and Kovu. I moved here to focus on my passions, which are singing, acting and dancing- next to coding of course. My coding journey started when I was a young padawan, teaching myself the ways of basic HTML and CSS while playing Neopets. I couldn't wait to get home and edit background images and font colors for hours, and not much has changed since then. </p>
             </div>
             </div>
         </div>
