--- a/portfolio.html
+++ b/portfolio.html
@@ -36,7 +36,7 @@
             </div>
     </nav>
 </nav>
-<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 1000px">
+<div class="flexbox bg p-4 m-auto m-sm-4" style="max-width: 2600px">
     <div class="row">
         <div class="col-md-12">
             <header>
@@ -45,7 +45,7 @@
     </header>
     <section>
       <div class="row">
-          <div class="col">
+          <div class="col-md-3 offset-md-3">
             <div class="card" style="width: 18rem;">
               <img src="https://vignette.wikia.nocookie.net/witcher/images/e/e8/Gwent_cardart_neutral_dandelion_poet.png/revision/latest?cb=20180130231711" class="card-img-top" alt="microphone">
               <div class="card-body">
@@ -55,15 +55,15 @@
           </div>
           <div class="col">
             <div class="card" style="width: 18rem;">
-              <img src="https://i.pinimg.com/originals/04/80/29/048029f362c484a2a46b928afbe98837.jpg" class="card-img-top" alt="drawing">
+              <img src="https://i.pinimg.com/originals/04/80/29/048029f362c484a2a46b928afbe98837.jpg" class="card-img-top" alt="they're taking the hobbits to Isengard">
               <div class="card-body">
-                <h2 class="card-text">DnD anyone? Stealth Archers Only</h2>
+                <h2 class="card-text">Stealth Archers Only</h2>
               </div>
             </div>
           </div>      
-      </div>
+      </div> 
       <div class="row">
-        <div class="col">
+        <div class="col-md-3 offset-md-3">
           <div class="card" style="width: 18rem;">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRk62fhKFiBA4M0nXxijjoHxyBpzQS6gs0_1wO5thiXy6nE6S-pSw&s" class="card-img-top" alt="dance">
             <div class="card-body">
