--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Darker+Grotesque:wght@300&display=swap" rel="stylesheet">
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="/assets/css/styles.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Mrs+Saint+Delafield&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="css/heading.css">
-        <link rel="stylesheet" href="css/body.css">
+        <link rel="stylesheet" href="/assets/css/heading.css">
+        <link rel="stylesheet" href="/assets/css/body.css">
     </head>
     <body id="page-top">
         <nav class="navbar navbar-expand-lg bg-secondary fixed-top" id="mainNav">
@@ -238,6 +238,6 @@ Project One - HTML/CSS - Materialize</p>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- <script src="../assets/mail/jqBootstrapValidation.js"></script>
         <script src="../assets/mail/contact_me.js"></script> -->
-        <script src="./node.js"></script>
+        <script src="assets/js/node.js"></script>
     </body>
 </html>
